--- a/README
+++ b/README
@@ -7,8 +7,113 @@ The Workflow API defines the steps and logic.
 QStash orchestrates execution by triggering each step and passing results between them.
 Each step runs independently and reports its result back before the next step starts
 
+![alt text](img/image.png) 
 
-Step-by-step flow
+
+This diagram shows **how a workflow is executed asynchronously using a Workflow API and QStash** (a message queue / scheduler). Here’s a step-by-step explanation in plain terms.
+
+---
+
+## High-level idea
+
+* The **client** starts a workflow.
+* The **Workflow API** defines the steps and logic.
+* **QStash** orchestrates execution by triggering each step and passing results between them.
+* Each step runs independently and reports its result back before the next step starts.
+
+---
+
+## Step-by-step flow
+
+### 1. Client → Workflow API
+
+* The **Client** sends **initial data** to the **Workflow API**.
+* This could be an HTTP request like “start this workflow with these inputs”.
+
+---
+
+### 2. Workflow API → QStash
+
+* The **Workflow API** forwards the same **initial data** to **QStash**.
+* QStash is responsible for **starting and coordinating** the workflow execution.
+* Think of QStash as the **traffic controller**.
+
+---
+
+### 3. QStash starts the workflow
+
+* QStash triggers **Step 1** by calling the Workflow API.
+* It passes the **initial data** to Step 1.
+
+---
+
+### 4. Step 1 executes
+
+* **Step 1** runs its logic (e.g., calling a service, processing data).
+* When it finishes successfully:
+
+  * It returns **step 1 results** back to QStash.
+  * The step is marked **SUCCESS**.
+
+---
+
+### 5. QStash triggers Step 2
+
+* QStash takes the **results from Step 1** and sends them to **Step 2**.
+* Step 2 does **not** run until Step 1 succeeds.
+
+---
+
+### 6. Step 2 executes
+
+* **Step 2** runs using Step 1’s output as input.
+* Once completed:
+
+  * It reports success back to QStash.
+  * The workflow continues or ends.
+
+---
+
+## Why this design is useful
+
+### ✅ Asynchronous & reliable
+
+* Steps don’t block each other.
+* QStash can retry steps if they fail.
+
+### ✅ Durable workflows
+
+* If a service crashes, QStash still knows:
+
+  * Which step ran
+  * What data to pass next
+
+### ✅ Clear separation of concerns
+
+* **Client**: just starts the workflow
+* **Workflow API**: defines steps and logic
+* **QStash**: scheduling, retries, sequencing
+
+---
+
+## Mental model
+
+* **Workflow API** = recipe
+* **QStash** = chef following the recipe step by step
+* **Client** = customer placing the order
+
+If you want, I can also:
+
+* Walk through a **real-world example** (e.g., order processing)
+* Explain **how retries and failures work**
+* Map this to **code or API calls**
+
+
+
+- This diagram shows how a workflow is executed asynchronously using a `Workflow API` and `QStash` (a message queue / scheduler)
+- Workflow API orchestration and QStash scheduling/retry/durability.
+
+# Step-by-step flow
 1. Client → Workflow API
 The Client sends initial data to the Workflow API.
 This could be an HTTP request like “start this workflow with these inputs”.
@@ -29,4 +134,55 @@ It returns step 1 results back to QStash.
 The step is marked SUCCESS.
 
 
-Node LTS + Express + TypeScript + Zod + Prisma (Postgres) + Redis + BullMQ + Pino + OpenTelemetry + Jest/Vitest + Docker + OpenAPI + Sentry
+- Node LTS + Express + TypeScript + Zod + Prisma (Postgres) + Redis + BullMQ + Pino + OpenTelemetry + Jest/Vitest + Docker + OpenAPI + Sentry
+
+
+- 1. full-featured durable workflows with at-least-once semantics, retries, timers, history, long-running state → use Temporal (open-source). It replaces both the Workflow API orchestration and QStash scheduling/retry/durability.
+- 2. a simpler, small infra footprint and are OK wiring orchestration yourself → use Redis + BullMQ (or RabbitMQ + your worker app). That matches QStash’s queueing/scheduling and you build a small workflow layer in your app.
+
+
+# Why BullMQ
+- Redis-backed job queue, supports delayed jobs, retries, repeatable jobs.
+- You implement a small orchestration layer: enqueue a job for step1; when worker finishes, it enqueues step2 with step1 results (like your diagram).
+
+# How it maps to the diagram
+- Client → Workflow API (Express) → push initial data into a Redis/Bull queue (start job).
+- Worker consumes job for Step1, processes, pushes Step1 results into a queue for Step2 (or directly calls an API).
+- You keep workflow state in Redis or Postgres (or attach the next-step payload to the job).
+
+
+
+# Pros
+Small infra (Redis). Easy to reason about.
+Good when workflow steps are short-lived and you can manage orchestration logic yourself.
+
+# Cons
+You must implement sequencing, durable state (where to persist step outputs), complex retries, and recovery from process restarts.
+Harder to do very long-running workflows or advanced patterns (signals, versioning, deterministic replay).
+Other OSS alternatives (quick list)
+Cadence (ancestor of Temporal) — similar to Temporal.
+Apache Airflow — better for data pipelines / scheduled DAGs (Python-first).
+NATS JetStream — streaming + persistence, can be used with microservices.
+Kafka (with Kafka Streams / ksql) — event-driven orchestration.
+RabbitMQ — classic broker; use with consumers & idempotency.
+Conductor (Netflix Conductor) — workflow orchestration, supports long-running flows.
+
+# Non-functional concerns & best practices (applies to all options)
+Idempotency: ensure activities/handlers are safe to retry.
+Durability: persist state/results in a DB (Postgres) or rely on the engine (Temporal stores history).
+Observability: instrument metrics/traces (OpenTelemetry), logs (Pino), and job dashboards (BullBoard or Temporal UI).
+Retries & Backoff: configure at the queue/engine level, but handle transient vs fatal errors.
+Security: secure message brokers, limit network access, use TLS.
+Local dev: use docker-compose for Temporal or Redis + Bull for fast dev iteration.
+
+Which to choose?
+# Choose Temporal if:
+Workflows are complex (many steps, timers, human actions), long-lived, or you want the orchestration engine to handle retries/visibility/history.
+
+# Choose BullMQ (Redis) if:
+Your workflows are simple/short, infra must be minimal, and you prefer to control sequencing yourself.
+
+# If you want, I’ll:
+scaffold a complete Express + TypeScript repo for Temporal (including Docker Compose to run Temporal server + worker + sample workflow), or
+scaffold Express + BullMQ with a dashboard, DB persistence for workflow state, and a sample end-to-end flow.
+Tell me which scaffold you want and I’ll generate it (folder structure, package.json, and full files).
